--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,56 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>secrets-mvn</groupId>
-  <artifactId>secrets-mvn</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>secrets-mvn</name>
-  <description>secrets-mvn</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.google.guava</groupId>
-  		<artifactId>guava</artifactId>
-  		<version>19.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-data-mongodb</artifactId>
-  		<version>1.3.5.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-thymeleaf</artifactId>
-  		<version>1.3.5.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.social</groupId>
-  		<artifactId>spring-social-facebook</artifactId>
-  		<version>2.0.3.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.json</groupId>
-  		<artifactId>json</artifactId>
-  		<version>20160212</version>
-  	</dependency>
-  </dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>secrets-mvn</groupId>
+	<artifactId>secrets-mvn</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>secrets-mvn</name>
+	<description>secrets-mvn</description>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>1.3.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>1.3.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-facebook</artifactId>
+			<version>2.0.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
+		<dependency>
+	      <groupId>org.slf4j</groupId>
+	      <artifactId>slf4j-api</artifactId>
+	      <version>1.7.21</version>
+	  </dependency>
+	</dependencies>
+  
+    <build>
+        <plugins>
+            <plugin>
+	           <groupId>com.heroku.sdk</groupId>
+	           <artifactId>heroku-maven-plugin</artifactId>
+	           <version>1.0.0</version>
+	           <configuration>
+	               <processTypes>
+	               <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Application</web>
+	               </processTypes>
+	           </configuration>
+	       </plugin>
+        </plugins>
+    </build>
 </project>
