--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
 	<name>secrets-mvn</name>
 	<description>secrets-mvn</description>
 	
+	<properties>
+        <java.version>1.8</java.version>
+    </properties>
+	
+	<parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.5.RELEASE</version>
+    </parent>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -39,18 +49,45 @@
 	  </dependency>
 	</dependencies>
   
+    <pluginRepositories>
+	    <pluginRepository>
+	        <id>spring-snapshots</id>
+	        <url>http://repo.spring.io/snapshot</url>
+	    </pluginRepository>
+	    <pluginRepository>
+	        <id>spring-milestones</id>
+	        <url>http://repo.spring.io/milestone</url>
+	    </pluginRepository>
+	</pluginRepositories>
+  
     <build>
-        <plugins>
-            <plugin>
-	           <groupId>com.heroku.sdk</groupId>
-	           <artifactId>heroku-maven-plugin</artifactId>
-	           <version>1.0.0</version>
-	           <configuration>
-	               <processTypes>
-	               <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Application</web>
-	               </processTypes>
-	           </configuration>
-	       </plugin>
-        </plugins>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	        </plugin>
+	        <!-- <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+	                <archive>
+	                    <manifest>
+                            <mainClass>secrets.Application</mainClass>
+	                    </manifest>
+	                </archive>
+                </configuration>
+           </plugin> -->
+           <plugin> 
+               <groupId>com.heroku.sdk</groupId>
+               <artifactId>heroku-maven-plugin</artifactId>
+               <version>1.0.0</version>
+               <configuration>
+                   <processTypes>
+                       <web>java $JAVA_OPTS -Dserver.port=$PORT -jar target/*.jar</web>
+                       <!-- <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Application</web> -->
+                   </processTypes>
+               </configuration>
+           </plugin>
+	    </plugins>
     </build>
 </project>
